# Sophia

./: .editorconfig  .gitignore  .gitmodules  .releaserc  BuildProject.ps1  BuildUnityPackages.ps1  CMakeLists.txt  LICENSE  README.md  Sophia.sln  _generate_package.bat  _generate_project.bat  _install_project.bat  appveyor.yml  build_project.bat  generatePackage.py  generateProject.bat  generateProject_conda.bat  index.html  index.json  installProject.bat  installProject.py  installProject_conda.bat  manifest.json  sitemap.xml  sophia.unitypackage  toc.html  xrefmap.yml
Sophia.Core/: Sophia.Core.csproj
src/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/backup/: CMakeLists.txt
src/libraries/backup/src/: basemonobehaviour.cs  physxmonobehaviour.cs
src/libraries/backup/src/core/: basemonobehaviour.cs  physxmonobehaviour.cs
src/libraries/backup/src/core/patterns/: singleton.cs  statemachine.cs
src/libraries/backup/src/core/recorder/: playback.cs  recorder.cs
src/libraries/backup/src/core/serialization/: deserializer.cs  iserializable.cs  ixmlobject.cs  serializer.cs
src/libraries/backup/src/core/settings/: isetting.cs  isettings.cs  setting.cs  settings.cs  settingsmanager.cs
src/libraries/backup/src/framework/camera/: fpscamerahandler.cs
src/libraries/backup/src/framework/data/: state.cs
src/libraries/backup/src/framework/inventory/: inventory.cs
src/libraries/backup/src/framework/movement/: charactermovement.cs  lookatmovement.cs  movetransformtotransform.cs
src/libraries/core/: CMakeLists.txt
src/libraries/core/src/core/: iactor.cs
src/libraries/core/src/core/algorithms/: clamp.cs
src/libraries/core/src/core/diagnostics/: logger.cs
src/libraries/core/src/core/events/: event.cs  eventcategory.cs  eventdispatch.cs  ievent.cs  ieventhandler.cs  ieventsender.cs
src/libraries/core/src/core/extentions/: listextentions.cs
src/libraries/core/src/core/filesystem/: extentions.cs  filesystemwatcher.cs  postfix.cs
src/libraries/core/src/core/math/: clamp.cs
src/libraries/core/src/core/patterns/: singleton.cs
src/libraries/core/src/core/recorder/: playback.cs  recorder.cs
src/libraries/core/src/core/serialization/: deserializer.cs  iserializable.cs  ixmlobject.cs  serializer.cs
src/libraries/core/src/core/settings/: isetting.cs  isettings.cs  setting.cs  settings.cs  settingsmanager.cs
src/libraries/core/src/core/threading/: copytask.cs  itask.cs  task.cs
src/libraries/core/src/core/timing/: countdowntimer.cs  itimer.cs  timermanager.cs
src/libraries/core/src/framework/inventory/: iinventoryitem.cs  inventorycontroller.cs
src/libraries/core/src/framework/timing/: countdowntimer.cs  itimer.cs  timermanager.cs
src/libraries/core/src/input/: iinputcommand.cs  iinputmanager.cs  inputcontroller.cs  keycode.cs  keystate.cs
src/libraries/core/src/input/desktop/: idesktopinputmanager.cs
src/libraries/core/tests/: observertests.cs  program.cs
src/libraries/editor/: CMakeLists.txt
src/libraries/editor/src/: editorservice.cs  editorstartup.cs  pluginassociations.cs  pluginhandler.cs  pluginloader.cs  pluginvalidator.cs
src/libraries/editor/src/editorextention/: basemonobehavioureditor.cs
src/libraries/editor/src/propertydrawers/: dummypropertydrawer.cs  highlightpropertydrawer.cs  inspectorflagpropertydrawer.cs  inspectorlistpropertydrawer.cs  optionalpropertydrawer.cs  readonlypropertydrawer.cs  warningifnullpropertydrawer.cs
src/libraries/editor/src/threading/: copytask.cs
src/libraries/platform/: CMakeLists.txt
src/libraries/platform/src/: basemonobehaviour.cs
src/libraries/platform/src/attributes/: commentattributes.cs  highlightattributes.cs  inspectorflagattributes.cs  labelfieldattributes.cs  nonnegativeattributes.cs  warningifnullattributes.cs
src/libraries/platform/src/core/: applicationmanager.cs  basemonobehaviour.cs  physxmonobehaviour.cs  tempsettingsmenu.cs
src/libraries/platform/src/core/patterns/: singleton.cs  statemachine.cs
src/libraries/platform/src/extentions/: monobehaviourextentions.cs
src/libraries/platform/src/extentions/inspectabledata/: inspectorlist.cs  minmaxfloat.cs
src/libraries/platform/src/framework/assembly/: assembleparent.cs  assemblepositionSnap.cs  assemblerotationSnap.cs  assemblymanager.cs  assemblypiece.cs  baseassemble.cs  connectionpoint.cs  connectionpointmanager.cs
src/libraries/platform/src/framework/camera/: fpscamerahandler.cs
src/libraries/platform/src/framework/data/: state.cs  transition.cs
src/libraries/platform/src/framework/inventory/: inventory.cs
src/libraries/platform/src/framework/movement/: charactermovement.cs  lookatmovement.cs  movetransformtotransform.cs
src/libraries/platform/src/input/desktop/: desktopinputmanager.cs
src/libraries/platform/src/utilities/: optional.cs  random.cs  screenshottaker.cs
src/libraries/sophia/: CMakeLists.txt
src/libraries/sophia/core/: CMakeLists.txt
src/libraries/sophia/core/src/: iactor.cs  iidentifier.cs  iinventoryitem.cs  iload.cs  inventorycontroller.cs  ipickup.cs  isave.cs  ispawner.cs  keycode.cs
src/libraries/sophia/core/src/assembly/: iassemblypiece.cs  iconnectionpoint.cs
src/libraries/sophia/core/src/events/: eventdispatch.cs  eventqueue.cs
src/libraries/sophia/core/src/framework/: iactor.cs
src/libraries/sophia/core/src/input/: inputcontroller.cs  jsonio.cs  keystate.cs
src/libraries/sophia/core/src/io/: iinputcommand.cs  iinputmanager.cs  inputaxiscommand.cs  inputcontroller.cs  inputkeycommand.cs  inputtouchcommand.cs  jsonio.cs
src/libraries/sophia/core/src/patterns/: iobserverevent.cs  observer.cs  subject.cs
src/libraries/sophia/core/src/recording/: iaction.cs
src/libraries/sophia/core/src/threading/: itask.cs  task.cs
src/libraries/sophia/editor/: CMakeLists.txt
src/libraries/sophia/editor/src/: editorservice.cs  reloadplugins.cs
src/libraries/sophia/platform/: CMakeLists.txt
src/libraries/sophia/platform/src/: basemonobehaviour.cs  desktopinputmanager.cs  gamemanager.cs  inputmanager.cs  inventory.cs  persistantmonobehaviour.cs  pickup.cs  spawner.cs
(+554 files in other folders)
